# finetuning-embedding

./: .gitignore  README.md  SERVING.md  pyproject.toml
.github/workflows/: azureml-mlops.yml
azureml/: deployment.yml  endpoint.yml  job.yml
data/: acronyms_ko.jsonl  synthetic_electronics.jsonl  terms_electronics_ko.txt  test.jsonl  train.jsonl
notebooks/: 01_finetune_bge_m3_kr.ipynb
notebooks/deploy/: sample-request.json
src/: evaluate.py  score.py  synth_data.py  train.py
