[project]
name = "bge-m3-kr-finetune"
version = "0.1.0"
description = "Azure ML Studio notebook project for fine-tuning BGE-M3 Korean embeddings"
requires-python = ">=3.10"
dependencies = [
  "accelerate>=1.1.0",
  "azure-ai-ml>=1.15.0",
  "azure-identity>=1.15.0",
  "datasets>=2.18.0",
  "mlflow>=2.10.0",
  "numpy>=1.26.0",
  "pandas>=2.1.0",
  "scikit-learn>=1.3.0",
  "sentence-transformers>=2.5.0",
  "torch>=2.1.0",
  "tqdm>=4.66.0",
]

[tool.uv]
dev-dependencies = [
  "ipykernel>=6.29.0",
  "jupyter>=1.0.0",
]
